2006-01-10  Chris Toshok  <toshok@ximian.com>

	* PagesSection.cs (.cctor): fix the default value for the
	enableSessionState attribute - it's not a bool, but a
	PagesEnableSessionState enum.

2006-01-10  Chris Toshok  <toshok@ximian.com>

	* MachineKeySection.cs (ValidationKeyBytes, DecryptionKeyBytes,
	DecryptionKey192Bits): if the keys are null, generate them.  Fixes
	Page.EnableViewStateMac support.

2006-01-09  Chris Toshok  <toshok@ximian.com>

	* RoleManagerSection.cs, SqlCacheDepencendySection.cs,
	SessionStateSection.cs, TraceSection.cs, SecurityPolicySection.cs,
	PagesSection.cs, RulesSettings.cs, UrlMappingSection.cs: fix
	dumper output.

2006-01-09  Chris Toshok  <toshok@ximian.com>

	* ExpressionBuilderCollection.cs (.cctor): no need to create a
	collection property here.  we're already in the collection.

	* CompilationSection.cs: fix typo.

2006-01-04  Chris Toshok  <toshok@ximian.com>

	* MachineKeySection.cs: bring over some more internal methods from
	MachineKeyConfig, and call Set{Decryption,Validation}Key from
	their respective property setters.

2006-01-03  Chris Toshok  <toshok@ximian.com>

	* AuthorizationSection.cs (IsValidUser): add analogous method from
	AuthorizationConfig.cs.

	* AuthorizationRule.cs: add predicates for Verb, User, and Role
	analogous to what existed in AuthorizationConfig.cs.

2005-12-11  Chris Toshok  <toshok@ximian.com>

	* WebConfigurationManager.cs (OpenMachineConfiguration): just call
	ConfigurationManager.OpenMachineConfiguration.
	(OpenWebConfiguration): remove the "IntPtr userToken" version and
	add a "string userName" version to clean up corcompare output.
	Modify all the overloads to pass null instead of IntPtr.Zero.
	(GetWebApplicationSection): if we're not running in a web
	application, use the machine configuration.

2005-12-06  Chris Toshok  <toshok@ximian.com>

	* CodeSubDirectory.cs (DirectoryName): don't use an private field,
	but base[directoyNameProp].
