@@ -1,5 +1,10 @@
 2006-01-10  Chris Toshok  <toshok@ximian.com>
 
+	* SystemWebSectionGroup.cs (HostingEnvironment): enable this property.
+	(ProcessModel): add the ConfigurationPropertyAttribute.
+
+2006-01-10  Chris Toshok  <toshok@ximian.com>
+
 	* PagesSection.cs (.cctor): fix the default value for the
 	enableSessionState attribute - it's not a bool, but a
 	PagesEnableSessionState enum.
